[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/menu_screens/MenuBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/buttons/PlayButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/buttons/SettingsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/buttons/TutorialButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui/buttons/QuitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui/labels/BaseLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://player/textures/main_character_1.png" type="Texture" id=7]
[ext_resource path="res://gui/menu_screens/TitleScreenMenu.gd" type="Script" id=8]

[node name="MenuBase" instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="TopRow" parent="Menu" index="0"]
margin_bottom = 400.0

[node name="Logo" type="TextureRect" parent="Menu/TopRow" index="0"]
margin_right = 200.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 400 )
texture = ExtResource( 7 )
stretch_mode = 5

[node name="Title" parent="Menu/TopRow" index="1" instance=ExtResource( 6 )]
margin_left = 204.0
margin_top = 164.0
margin_right = 1016.0
margin_bottom = 236.0
rect_scale = Vector2( 1, 1 )
custom_colors/font_color = Color( 0.517647, 0.494118, 0.815686, 1 )
text = "   insert name here"

[node name="MiddleRow" parent="Menu" index="1"]
margin_top = 404.0

[node name="Buttons" parent="Menu/MiddleRow" index="0"]
margin_right = 1000.0
margin_bottom = 432.0

[node name="PlayButton" parent="Menu/MiddleRow/Buttons" index="0" instance=ExtResource( 2 )]
margin_right = 1000.0

[node name="SettingsButton" parent="Menu/MiddleRow/Buttons" index="1" instance=ExtResource( 3 )]
margin_top = 84.0
margin_right = 1000.0
margin_bottom = 164.0

[node name="TutorialButton" parent="Menu/MiddleRow/Buttons" index="2" instance=ExtResource( 4 )]
margin_top = 168.0
margin_right = 1000.0
margin_bottom = 248.0

[node name="QuitButton" parent="Menu/MiddleRow/Buttons" index="3" instance=ExtResource( 5 )]
margin_top = 252.0
margin_right = 1000.0
margin_bottom = 332.0
[connection signal="pressed" from="Menu/MiddleRow/Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/MiddleRow/Buttons/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Menu/MiddleRow/Buttons/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="Menu/MiddleRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
